# jarvisco

./: Modelfile  __init__.py  adapter.py  agent.py  analyzer.py  build_jarvisco.sh  compilacion_nuitka.sh  config.py  install_jarvisco.sh  interactive_chat.py  jarvisco.gbnf  llama_engine.py  pyproject.toml  qwen_handler.py  requirements.txt  sandbox_executor.py  session_manager.py  setup.py  setup.sh  setup_inference.sh
