[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvisco"
version = "1.0.0"
description = "Copiloto Offline Senior para Termux"
readme = "README.md"
authors = [
    {name = "Sergio Alberto Sanchez Echeverria"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
]
requires-python = ">=3.8"
dependencies = []  # Vacío pero explícito

[project.scripts]
jarvisco = "interactive_chat:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.package-data]
jarvisco = ["*.gbnf"]
