[tool.poetry]
name = "jarvisco"
version = "0.1.0"
description = "A conversational AI project"
authors = ["Ruben <ruben12n11-a11y@example.com>"]
inherits = ["poetry-core >=1.0.0"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "*"
pytest = "*"
black = "*"
flake8 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
javisco = "jarvisco:entrypoint"